# softwareengineeringfs2020templaterepository-OURgroup

./: CMakeLists.txt  CONTENTS.csv  CONTRIBUTING.md  LICENSE  README.md  TODO
assets/: readme.md
doc/: testing_report.md
doc/SDS/: sds_template-ieee.odt
doc/SDS/source/: Algebra.txt  CAS.txt  ClassDiagramm.txt  Composite.txt  Constant.txt  Help.txt  Storage.txt  seq1.txt  seq2.txt  seq3.txt  seq4.txt
doc/SRS/: srs_groupK.odt  srs_template-ieee.odt
doc/doxygen/: CMakeLists.txt  Doxyfile.in
healthmonitordevices/: .depedencies  .gitignore  .pipPackagesInstal.txt  LICENSE  readme.md
healthmonitordevices/assets/: ex.json
healthmonitordevices/src/: actuatorDevice.py  main.py  repeatedTimer.py  sensorDevice.py
practicalcppsocketsethz/: CMakeLists.txt  readme.md
practicalcppsocketsethz/PracticalSocket/: PracticalSocket.h
practicalcppsocketsethz/examples/: BroadcastReceiver.cpp  BroadcastSender.cpp  Makefile  MulticastReceiver.cpp  MulticastSender.cpp  TCPEchoClient.cpp  TCPEchoServer-Thread.cpp  TCPEchoServer.cpp  UDPEchoClient.cpp  UDPEchoServer.cpp
src/: common.hh
src/PracticalSocket/: CMakeLists.txt  PracticalSocket.cpp
src/main/: CMakeLists.txt  hospital.cpp  hospital.h  main.cc  parser.cpp  parser.h  server.cpp  server.h
src/packageExample/: CMakeLists.txt  dummyClass.cc
tests/: CMakeLists.txt  packageExample_test.cc
tools/: install_depedencies.sh  make_all.sh  test_all.sh
